common_odin/api_os.odin

package common_odin

OS_Limits_MaxGamepadCount :: 16
OS_Limits_MaxGestureCount :: 5
OS_Limits_MaxBufferedInput :: 256
OS_Limits_MaxCodepointsPerFrame :: 64
OS_Limits_MaxAudioDeviceCount :: 32
OS_Error :: struct
{
	ok: bool,
	code: u32,
	what: string,
}
OS_ButtonState :: bit_field u8
{
	changes: u8 | 7,
	is_down: u8 | 1,
}
OS_KeyboardKey :: enum i32{
	Any = 0,
	Escape,
	Up,
	Down,
	Left,
	Right,
	LeftControl,
	RightControl,
	Control,
	LeftShift,
	RightShift,
	Shift,
	LeftAlt,
	RightAlt,
	Alt,
	Tab,
	Enter,
	Backspace,
	PageUp,
	PageDown,
	End,
	Home,
	Space = ' ',
	_0 = '0',
	_1,
	_2,
	_3,
	_4,
	_5,
	_6,
	_7,
	_8,
	_9,
	A = 'A',
	B,
	C,
	D,
	E,
	F,
	G,
	H,
	I,
	J,
	K,
	L,
	M,
	N,
	O,
	P,
	Q,
	R,
	S,
	T,
	U,
	V,
	W,
	X,
	Y,
	Z,
	Numpad0,
	Numpad1,
	Numpad2,
	Numpad3,
	Numpad4,
	Numpad5,
	Numpad6,
	Numpad7,
	Numpad8,
	Numpad9,
	F1,
	F2,
	F3,
	F4,
	F5,
	F6,
	F7,
	F8,
	F9,
	F10,
	F11,
	F12,
	F13,
	F14,
	Count = 256,
}
OS_KeyboardState :: struct
{
	buffered_count: i32,
	buttons: [256]OS_ButtonState,
	buffered: [OS_Limits_MaxBufferedInput]u8,
}
OS_MouseButton :: enum i32{
	Left,
	Right,
	Middle,
	Other0,
	Other1,
	Other2,
	Count = 6,
}
OS_MouseState :: struct
{
	pos: [2]f32,
	old_pos: [2]f32,
	scroll: i32,
	buttons: [6]OS_ButtonState,
}
OS_GamepadButton :: enum i32{
	A,
	B,
	X,
	Y,
	Left,
	Right,
	Up,
	Down,
	LB,
	RB,
	RS,
	LS,
	Start,
	Back,
	Count = 14,
}
OS_GamepadState :: struct
{
	left: [2]f32,
	right: [2]f32,
	lt: f32,
	rt: f32,
	buttons: [14]OS_ButtonState,
}
OS_GamepadStates :: struct
{
	connected_bitset: u32,
	gamepads: [OS_Limits_MaxGamepadCount]OS_GamepadState,
}
OS_GestureState :: struct
{
	active: bool,
	released: bool,
	start_pos: [2]f32,
	current_pos: [2]f32,
	delta: [2]f32,
}
OS_Init_Audio :: 0x0001
OS_Init_WindowAndGraphics :: 0x0002
OS_Init_Sleep :: 0x0004
OS_Init_Gamepad :: 0x0008
OS_Init_MediaFoundation :: 0x0010
OS_Capabilities :: struct
{
	has_mouse: bool,
	has_keyboard: bool,
	has_gamepad: bool,
	has_audio: bool,
	has_gestures: bool,
	is_mobile_like: bool,
	has_multiple_audio_devices: bool,
	monitors: [32]struct
	{
		virtual_x: i32,
		virtual_y: i32,
		virtual_width: i32,
		virtual_height: i32,
		scaling_percentage: i32,
		refresh_rate: struct
		{
			num: i32,
			den: i32,
		},
	},
}
OS_SystemTime :: struct
{
	year: i32,
	month: i32,
	week_day: i32,
	day: i32,
	hours: i32,
	minutes: i32,
	seconds: i32,
	milliseconds: i32,
}
OS_AudioProcArgs :: struct
{
	user_data: rawptr,
	samples: ^i16,
	sample_count: i32,
	sample_rate: i32,
	channel_count: i32,
}
OS_AudioProc :: #type proc "c"(#by_ptr args: OS_AudioProcArgs)
OS_AudioDeviceInfo :: struct
{
	id: u32,
	name: [64]u8,
}
OS_RetrieveAudioDevicesResult :: struct
{
	count: i32,
	default_device_id: u32,
	devices: [OS_Limits_MaxAudioDeviceCount]OS_AudioDeviceInfo,
}
OS_Thread :: struct
{
	ptr: rawptr,
}
OS_ThreadProc :: #type proc "c"(arg: rawptr) -> i32
OS_ThreadDesc :: struct
{
	proc_: ^OS_ThreadProc,
	user_data: rawptr,
	name: string,
	scratch_chunk_size: int,
	scratch_chunk_count: int,
}
OS_Window :: struct
{
	ptr: rawptr,
}
OS_WindowDesc :: struct
{
	fullscreen: bool,
	resizeable: bool,
	x: i32,
	y: i32,
	width: i32,
	height: i32,
	title: string,
}
OS_MouseLockKind :: enum i32{
	None = 0,
	Hide,
	HideAndClip,
	LockInWindowRegion,
}
OS_EventKind :: enum i32{
	Null = 0,
	InternalEvent,
	WindowTyping,
	WindowMove,
	WindowResize,
	WindowClose,
	WindowGotFocus,
	WindowLostFocus,
	WindowMouseWheel,
}
OS_Event :: struct
{
	kind: OS_EventKind,
	window_handle: OS_Window,
	using _: struct #raw_union
	{
		window_typing: struct
		{
			codepoint: u32,
			is_repeat: bool,
		},
		window_move: struct
		{
			x: i32,
			y: i32,
		},
		window_resize: struct
		{
			total_width: i32,
			total_height: i32,
			user_width: i32,
			user_height: i32,
		},
		window_mouse_wheel: struct
		{
			delta: i32,
		},
	},
}
OS_GamepadMap_Button_A :: 1
OS_GamepadMap_Button_B :: 2
OS_GamepadMap_Button_X :: 3
OS_GamepadMap_Button_Y :: 4
OS_GamepadMap_Button_Left :: 5
OS_GamepadMap_Button_Right :: 6
OS_GamepadMap_Button_Up :: 7
OS_GamepadMap_Button_Down :: 8
OS_GamepadMap_Button_LeftShoulder :: 9
OS_GamepadMap_Button_RightShoulder :: 10
OS_GamepadMap_Button_LeftStick :: 11
OS_GamepadMap_Button_RightStick :: 12
OS_GamepadMap_Button_Start :: 13
OS_GamepadMap_Button_Back :: 14
OS_GamepadMap_Pressure_LeftTrigger :: 15
OS_GamepadMap_Pressure_RightTrigger :: 16
OS_GamepadMap_Axis_LeftX :: 17
OS_GamepadMap_Axis_LeftY :: 18
OS_GamepadMap_Axis_RightX :: 19
OS_GamepadMap_Axis_RightY :: 20
OS_GamepadMap__Count :: 21
OS_GamepadMapping :: struct
{
	guid: [32]u8,
	buttons: [32]u16,
	axes: [16]u16,
	povs: [8][4]u16,
}
OS_VirtualFlags_ReserveOnly :: 0x0001
OS_VirtualFlags_ReadOnly :: 0x0002
OS_VirtualFlags_ExecuteOnly :: 0x0004
OS_FileInfo :: struct
{
	exists: bool,
	read_only: bool,
	created_at: u64,
	modified_at: u64,
	size: u64,
}
OS_Library :: struct
{
	ptr: rawptr,
}
OS_OpenFileFlags :: enum i32{
	Read = 0x01,
	Write = 0x02,
	FailIfAlreadyExists = 0x04,
	FailIfDoesntExist = 0x08,
}
OS_File :: struct
{
	ptr: rawptr,
}
OS_FileMapping :: struct
{
	ptr: rawptr,
}
OS_ChildProcessDesc :: struct
{
	stdin_file: OS_File,
	stdout_file: OS_File,
	stderr_file: OS_File,
}
OS_ChildProcess :: struct
{
	ptr: rawptr,
}
OS_RWLock :: struct
{
	ptr: rawptr,
}
OS_Semaphore :: struct
{
	ptr: rawptr,
}
OS_ConditionVariable :: struct
{
	ptr: rawptr,
}
